one section completed

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 
 
 .header{
-
+    margin-bottom:30px ; 
   width: 100%;
   height: 34vw;
   background: url("../../assets/frontend_assets/header_img.png");
