--- a/src/components/FoodItemCard/fooddisplaycard.module.css
+++ b/src/components/FoodItemCard/fooddisplaycard.module.css
@@ -7,6 +7,11 @@
   overflow: hidden;
   transition: 0.3s;
   animation: fadeIn 3s;
+  cursor: pointer;
+}
+
+.foodDisplayCard:hover{
+  transform: scale(1.04);
 }
 
 .image{
